# texmark

./: .gitignore  404.html  LICENSE  README.md  TRADEMARKS.md  example.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/: FUNDING.yml
.github/workflows/: docs.yml  pypi.yml  tests.yml
build-backends/: index.html
custom-templates/: index.html
docs/: build-backends.md  custom-templates.md  encoding.md  equations.md  figures.md  index.md  installation.md  live-preview.md  multi-file.md  preamble.md  quickstart.md  yaml-reference.md
docs/journals/: agujournal.md  ametsoc.md  arxiv.md  beamer.md  book.md  classicthesis.md  copernicus.md  elsarticle.md  index.md  memoir.md  pnas.md  report.md  science.md  springernature.md
encoding/: index.html
equations/: index.html
figures/: index.html
installation/: index.html
journals/: index.html
journals/agujournal/: index.html
journals/ametsoc/: index.html
journals/arxiv/: index.html
journals/beamer/: index.html
journals/book/: index.html
journals/classicthesis/: index.html
journals/copernicus/: index.html
journals/elsarticle/: index.html
journals/memoir/: index.html
journals/pnas/: index.html
journals/report/: index.html
journals/science/: index.html
journals/springernature/: index.html
live-preview/: index.html
multi-file/: index.html
preamble/: index.html
quickstart/: index.html
search/: search_index.json
tests/: __init__.py  test_biblatex.py  test_book_template.py  test_build_loop.py  test_build_multifile.py  test_build_multifile_figures.py  test_build_tex.py  test_chapters_only.py  test_classicthesis_template.py  test_context.py  test_crossref_filter.py  test_e2e.py  test_embed_filter.py  test_equations_filter.py  test_filters.py  test_frontmatter.py  test_memoir_template.py  test_prefix.py  test_project.py  test_report_template.py  test_unicode_bib.py  test_user_preamble.py  test_utils.py  test_watch.py
tests/fixtures/book/: chapter1.md  (+2 more)
texmark/: build.py  context.py  copernicus.py  filters.py  journals.py  logs.py  project.py  sectiontracker.py  shared.py  unicode_bib.py
texmark/filters/: __main__.py  crossref.py  download_images.py  embed.py  equations.py  figures.py  images.py  tabular.py
yaml-reference/: index.html
(+28 files in other folders)
