[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "texmark"
authors = [
    {name = "Mahé Perrette", email = "mahe.perrette@gmail.com"},
]
description = "Write scientific articles in Markdown and convert them to journal-ready LaTeX/PDF (Copernicus, Science, AMS, ...)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "markdown",
    "latex",
    "pandoc",
    "pdf",
    "scientific-writing",
    "scientific-publishing",
    "academic-writing",
    "journal",
    "manuscript",
    "copernicus",
    "ametsoc",
    "science-journal",
    "jinja2",
    "bibtex",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "Topic :: Software Development :: Documentation",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
]

dynamic = ["version", "dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage      = "https://github.com/perrette/texmark"
Repository    = "https://github.com/perrette/texmark"
Issues        = "https://github.com/perrette/texmark/issues"
Documentation = "https://github.com/perrette/texmark#readme"
Changelog     = "https://github.com/perrette/texmark/commits/main"

[tool.setuptools.packages.find]
where = ["."]
include = ["texmark"]

[tool.setuptools.package-data]
texmark = ["templates/**/*"]

[project.scripts]
texmark = "texmark.build:main"
texmark-journal = "texmark.filters.__main__:main"
texmark-download-images = "texmark.filters.download_images:main"

[tool.setuptools_scm]
write_to = "texmark/_version.py"
